Fix issue causing svg graphics in introduction and about sections to become unaligned for certain viewport sizes

--- a/src/sections/AboutSection/AboutSection.module.scss
+++ b/src/sections/AboutSection/AboutSection.module.scss
@@ -3,7 +3,7 @@
 .about {
   position: relative;
   width: 100%;
-  background-position: center;
+  background-position: center top;
   background-size: cover;
   @include m.color-transition;
   overflow: hidden;
